springboot-pro/eureka-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server-pro
  namespace: springboot-pro
  labels:
    app: eureka-server-pro
spec:
  type: NodePort
  ports:
    - port: 8761
      name: eureka-server-pro
      nodePort: 8761
  selector:
    app: eureka-server-pro
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka-server-pro
  namespace: springboot-pro
spec:
  serviceName: "eureka-server-pro"
  replicas: 2
  selector:
    matchLabels:
      app: eureka-server-pro
  template:
    metadata:
      labels:
        app: eureka-server-pro
    spec:
      containers:
        - name: eureka-server-pro
          image: 192.168.5.4:82/csbr/eureka-server-pro:1.0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
          resources:                        
            requests:                         
              cpu: "200m"                      
              memory: "256Mi"
      nodeSelector:
        zipkin: zipkin               
  podManagementPolicy: "Parallel"
