springboot-pro/fe-front-warehouse.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fe-front-warehouse-pro
  namespace: springboot-pro
  labels:
    app: fe-front-warehouse-pro
spec:
  type: NodePort
  ports:
    - port: 80
      name: fe-front-warehouse-pro
      nodePort: 8906
  selector:
    app: fe-front-warehouse-pro
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fe-front-warehouse-pro
  namespace: springboot-pro
spec:
  serviceName: "fe-front-warehouse-pro"
  replicas: 1
  selector:
    matchLabels:
      app: fe-front-warehouse-pro
  template:
    metadata:
      labels:
        app: fe-front-warehouse-pro
    spec:
      containers:
        - name: fe-front-warehouse-pro
          image: 192.168.5.4:82/csbr/fe-front-warehouse-pro:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8906
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
  podManagementPolicy: "Parallel"
