springboot-pro/ms-user-remuneration-service.yaml
# ms-user-remuneration-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-user-remuneration-service-pro
  namespace: springboot-pro
  labels:
    app: ms-user-remuneration-service-pro
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-user-remuneration-service-pro
  template:
    metadata:
      labels:
        app: ms-user-remuneration-service-pro
    spec:
      containers:
        - name: ms-user-remuneration-service-pro
          image: 192.168.5.4:82/csbr/ms-user-remuneration-service-pro:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 9002
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ms-user-remuneration-service-pro
  namespace: springboot-pro
  labels:
    app: ms-user-remuneration-service-pro
spec:
  ports:
    - port: 9002
      targetPort: 9002
      name: ms-user-remuneration-service-pro
  clusterIP: None
  selector:
    app: ms-user-remuneration-service-pro
