springboot-pro/otc-mobile.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: otc-mobile-pro
  namespace: springboot-pro
  labels:
    app: otc-mobile-pro
spec:
  type: NodePort
  ports:
    - port: 80
      name: otc-mobile-pro
      nodePort: 8087
  selector:
    app: otc-mobile-pro
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: otc-mobile-pro
  namespace: springboot-pro
spec:
  serviceName: "otc-mobile-pro"
  replicas: 1
  selector:
    matchLabels:
      app: otc-mobile-pro
  template:
    metadata:
      labels:
        app: otc-mobile-pro
    spec:
      containers:
        - name: otc-mobile-pro
          image: 192.168.5.4:82/csbr/otc-mobile-pro:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8087
          resources:
            requests:
              cpu: "200m"                     
              memory: "256Mi"
      nodeSelector:
        zipkin: zipkin              
  podManagementPolicy: "Parallel"
