springboot-pro/seata-server.yaml
# seata-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: seata-server-pro
  namespace: springboot-pro
  labels:
    app: seata-server-pro
spec:
  type: NodePort  
  ports:
    - port: 8091
      name: seata-server-pro
      nodePort: 8091
  selector:
    app: seata-server-pro
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seata-server-pro
  namespace: springboot-pro
spec:
  serviceName: "seata-server"
  replicas: 1
  selector:
    matchLabels:
      app: seata-server-pro
  template:
    metadata:
      labels:
        app: seata-server-pro
    spec:
      containers:
        - name: seata-server-pro
          image: 192.168.5.4:82/csbr/seata-server-pro:1.3.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8091
          resources:                                  
            requests:
              cpu: "200m"                     
              memory: "512Mi"
      nodeSelector:
        zipkin: zipkin              
  podManagementPolicy: "Parallel"
