springboot-pro/supply-chain-data-platform-es.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: supply-chain-data-platform-es-pro
  namespace: springboot-pro
  labels:
    app: supply-chain-data-platform-es-pro
spec:
  type: NodePort
  ports:
    - port: 80
      name: supply-chain-data-platform-es-pro
      nodePort: 8084
  selector:
    app: supply-chain-data-platform-es-pro
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: supply-chain-data-platform-es-pro
  namespace: springboot-pro
spec:
  serviceName: "supply-chain-data-platform-es-pro"
  replicas: 1
  selector:
    matchLabels:
      app: supply-chain-data-platform-es-pro
  template:
    metadata:
      labels:
        app: supply-chain-data-platform-es-pro
    spec:
      containers:
        - name: supply-chain-data-platform-es-pro
          image: 192.168.5.4:82/csbr/supply_chain_data_platform_es-pro:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
          resources:
            requests:
              cpu: "200m"                     
              memory: "256Mi"
      nodeSelector:
        zipkin: zipkin              
  podManagementPolicy: "Parallel"
