springboot-pro/user-supply-platform-management.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-supply-platform-management-pro
  namespace: springboot-pro
  labels:
    app: user-supply-platform-management-pro
spec:
#  type: NodePort
  ports:
    - port: 80
      name: user-supply-platform-management-pro
#      nodePort: 8902
  selector:
    app: user-supply-platform-management-pro
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-supply-platform-management-pro
  namespace: springboot-pro
spec:
  serviceName: "user-supply-platform-management-pro"
  replicas: 1
  selector:
    matchLabels:
      app: user-supply-platform-management-pro
  template:
    metadata:
      labels:
        app: user-supply-platform-management-pro
    spec:
      containers:
        - name: user-supply-platform-management-pro
          image: 192.168.5.4:82/csbr/user-supply-platform-management-pro:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8902
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
  podManagementPolicy: "Parallel"
