springboot-pro/ingress-fe-front-warehouse.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-fe-front-warehouse-pro
  namespace: springboot-pro
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
    - hosts:
        - qzc.csyaoly.com
      secretName: https-ingress-secret
  rules:
    - host: qzc.csyaoly.com
      http:
        paths:
          - path: /
            backend:
              serviceName: fe-front-warehouse-pro
              servicePort: 80
