springboot-pro/ingress-supply-chain-data-platform.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-supply-chain-data-platform-pro
  namespace: springboot-pro
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
    - hosts:
        - platform.csyaoly.com
      secretName: https-ingress-secret
  rules:
    - host: platform.csyaoly.com
      http:
        paths:
          - path: /
            backend:
              serviceName: supply-chain-data-platform-pro
              servicePort: 80
