springboot-pro/ingress-supply-platform-management.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-supply-platform-management-pro
  namespace: springboot-pro
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
    - hosts:
        - scmsup.csyaoly.com
      secretName: https-ingress-secret
  rules:
    - host: scmsup.csyaoly.com
      http:
        paths:
          - path: /
            backend:
              serviceName: supply-platform-management-pro
              servicePort: 80
