springboot-pro/ingress-wyn.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-wyn-pro
  namespace: wyn-enterprise
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
spec:
  tls:
  - hosts:
    - bi.csbr.cn
    secretName: https-csbr-cn-ingress-secret
  rules:
  - host: bi.csbr.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: wyn-svc
          servicePort: 51980
