springboot-pro/ingress-zuul.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-zuul-pro
  namespace: springboot-pro
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
  - hosts:
    - scmapi.csyaoly.com
    secretName: https-ingress-secret
  rules:
  - host: scmapi.csyaoly.com
    http:
      paths:
      - path: /
        backend:
          serviceName: zuul-server-pro
          servicePort: 8081
